--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.release>23</maven.compiler.release>
         <maven.compiler.target>23</maven.compiler.target>
     </properties>
     <dependencies>
